# idc-series-preview

./: .gitignore  README.md  dicom_mosaic.py  pyproject.toml
docs/: API_GUIDE.md  DEPENDENCY_DIAGRAM.md  PROPOSED_API_FIRST_DESIGN.md  REFACTORING_GET_INSTANCES.md  build-index-plan.md  dicom-mosaic.1  dicom-mosaic.md  dicom-series-preview.md  dicom-series-preview.md.old  idc-series-preview.md  idc-series-preview.md.old
src/: __init__.py  contrast.py  mosaic.py  retriever.py
src/dicom_mosaic/: __init__.py  __main__.py  contrast.py
src/dicom_series_preview/: __init__.py  __main__.py  api.py  constants.py  contrast.py  header_capture.py  image_utils.py  index_cache.py  mosaic.py  retriever.py  slice_sorting.py  workers.py
src/idc_series_preview/: __init__.py  __main__.py  api.py  cli_click.py  cli_core.py  constants.py  contrast.py  image_utils.py  index_cache.py  retriever.py  series_spec.py  workers.py
tests/: test_api.py  test_cli_commands.py  test_click_cli.py  test_index_cache.py  test_workers.py
