[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idc-series-preview"
version = "0.5.2"
description = "Preview DICOM series stored on S3, HTTP, or local files with intelligent sampling and visualization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["dicom", "medical-imaging", "series", "preview", "viewer", "s3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "obstore>=0.1.0",
    "pydicom>=2.4.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "polars>=0.20.0",
    "platformdirs>=3.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
gdcm = [
    "gdcm",
]

[project.scripts]
idc-series-preview = "idc_series_preview.cli_click:cli"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term"
